apps/guardrail-web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guardrail-web
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guardrail-web
  template:
    metadata:
      labels:
        app: guardrail-web
      annotations:
        configmap.reloader.stakater.com/reload: "guardrail-config"
        secret.reloader.stakater.com/reload: "guardrail-database-secrets,guardrail-oidc-secrets,guardrail-jwk-secrets,guardrail-email-secrets,guardrail-provisioner-secrets"
    spec:
      containers:
        - name: guardrail-web
          image: ghcr.io/rcaelers/guardrail-server:placeholder
          command: ["/app/guardrail"]
          args: ["web", "-C", "/config"]
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /config/01-ingress.yaml
              subPath: 01-ingress.yaml
            - name: config-volume
              mountPath: /config/01-database.yaml
              subPath: 01-database.yaml
            - name: config-volume
              mountPath: /config/01-object-storage.yaml
              subPath: 01-object-storage.yaml
            - name: config-volume
              mountPath: /config/01-web.yaml
              subPath: 01-web.yaml
            - name: oidc-secret-volume
              mountPath: /config/04-oidc-secret.yaml
              subPath: secrets
            - name: jwk-secret-volume
              mountPath: /config/04-jwk-secret.yaml
              subPath: secrets
            - name: provisioner-secret-volume
              mountPath: /config/05-provisioner-secret.yaml
              subPath: secrets
            - name: database-secret-volume
              mountPath: /config/06-database-secret.yaml
              subPath: secrets
            - name: email-secret-volume
              mountPath: /config/07-email-secret.yaml
              subPath: secrets
          startupProbe:
            httpGet:
              path: /live
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /live
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 30
            failureThreshold: 6
      volumes:
        - name: config-volume
          configMap:
            name: guardrail-config
        - name: oidc-secret-volume
          secret:
            secretName: guardrail-oidc-secrets
        - name: jwk-secret-volume
          secret:
            secretName: guardrail-jwk-secrets
        - name: provisioner-secret-volume
          secret:
            secretName: guardrail-provisioner-secrets
        - name: database-secret-volume
          secret:
            secretName: guardrail-database-secrets
        - name: email-secret-volume
          secret:
            secretName: guardrail-email-secrets
