apps/guardrail-web/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guardrail-web
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
  hostnames:
    - crashes.workrave.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      timeouts:
        request: 60s
      backendRefs:
        - name: guardrail-web
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 60s
      backendRefs:
        - name: guardrail-ui
          port: 3000
