apps/guardrail-web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guardrail-web
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: crashes.workrave.org
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: guardrail-web
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guardrail-ui
                port:
                  number: 3000
  tls:
    - hosts:
        - crashes.workrave.org
      secretName: guardrail-web-tls
